<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_account_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:text="@string/account_text"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/login_edit_ip"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35sp"
                android:layout_toRightOf="@id/login_account_textview"
                android:textColor="@android:color/background_dark"
                android:hint="@string/account_hint"
                android:inputType="numberDecimal|text"
                android:padding="2dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/ip_clear_btn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/login_clear_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:text="@string/passwd_text"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/login_edit_room"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35sp"
                android:hint="@string/passwd_hint"
                android:inputType="numberDecimal|text"
                android:padding="2dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/room_clear_btn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/login_clear_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_send_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:text="@string/send_position"
                android:textColor="@android:color/background_dark" />

            <EditText
                android:id="@+id/et_send_position"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35sp"
                android:hint="@string/position_hint"
                android:inputType="number"
                android:padding="2dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/send_position_clear_btn"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/login_clear_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login_btn_text" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>